Remove project name and image from devcontainer config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,9 @@
 {
-  "name": "Project with Template Access",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  
   "customizations": {
     "codespaces": {
-      "permissions": {
-        "repository": {
-          "wclaytor/project-template": {
-            "contents": "read"
-          }
+      "repositories": {
+        "wclaytor/project-template": {
+          "permissions": "read"
         }
       }
     }
